add_executable(elf2e32
    source/byte_pair.h
    source/checksum.h
    source/deffile.h
    source/dll_type_target.h
    source/e32exporttable.h
    source/e32imagefile.h
    source/elf2e32.h
    source/elffilesupplied.h
    source/errorhandler.h
    source/exetarget.h
    source/export_type_rebuild_target.h
    source/farray.h
    source/filedump.h
    source/huffman.h
    source/inflate.h
    source/librarytarget.h
    source/message.h
    source/parametermanager.h
    source/pl_common.h
    source/pl_elfexports.h
    source/pl_elfimage.h
    source/pl_elfimportrelocation.h
    source/pl_elfimports.h
    source/pl_elflocalrelocation.h
    source/pl_elfproducer.h
    source/pl_elfreader.h
    source/pl_elfrelocation.h
    source/pl_elfrelocations.h
    source/pl_sym_type.h
    source/pl_symbol.h
    source/polydll_fb_target.h
    source/polydll_rebuild_target.h
    source/staticlibsymbols.h
    source/usecasebase.h
    source/byte_pair.cpp
    source/checksum.cpp
    source/deffile.cpp
    source/deflatecompress.cpp
    source/dll_type_target.cpp
    source/e32exporttable.cpp
    source/e32imagefile.cpp
    source/elf2e32.cpp
    source/elffilesupplied.cpp
    source/errorhandler.cpp
    source/exetarget.cpp
    source/export_type_rebuild_target.cpp
    source/filedump.cpp
    source/huffman.cpp
    source/imgdump.cpp
    source/inflate.cpp
    source/librarytarget.cpp
    source/main.cpp
    source/message.cpp
    source/pagedcompress.cpp
    source/parametermanager.cpp
    source/pl_common.cpp
    source/pl_elfexports.cpp
    source/pl_elfimage.cpp
    source/pl_elfimportrelocation.cpp
    source/pl_elfimports.cpp
    source/pl_elflocalrelocation.cpp
    source/pl_elfproducer.cpp
    source/pl_elfreader.cpp
    source/pl_elfrelocation.cpp
    source/pl_elfrelocations.cpp
    source/pl_symbol.cpp
    source/polydll_fb_target.cpp
    source/polydll_rebuild_target.cpp
    source/portable.cpp
    source/usecasebase.cpp)
    
target_include_directories(elf2e32 PRIVATE include)